--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/SearchFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.applicationrociosieiro.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        android:id="@+id/SearchFragment"
+        android:name="com.example.applicationrociosieiro.presentation.search.SearchFragment"
+        android:label="searchFragment"
+        tools:layout="@layout/search_fragment_layout">
 
-        <action
+     <!--   <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            app:destination="@id/SecondFragment" />-->
     </fragment>
-    <fragment
+    <!--<fragment
         android:id="@+id/SecondFragment"
         android:name="com.example.applicationrociosieiro.SecondFragment"
         android:label="@string/second_fragment_label"
@@ -24,5 +24,5 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
-    </fragment>
+    </fragment>-->
 </navigation>
