--- a/app/src/main/res/layout/result_item_layout.xml
+++ b/app/src/main/res/layout/result_item_layout.xml
@@ -9,13 +9,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clArtist"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ivShare">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageArtist"
+            android:id="@+id/ivArtist"
             android:layout_width="@dimen/margin_90dp"
             android:layout_height="@dimen/margin_60dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,9 +33,9 @@
             android:lineSpacingExtra="5sp"
             android:layout_marginStart="@dimen/margin_8dp"
             android:layout_marginEnd="@dimen/margin_8dp"
-            app:layout_constraintStart_toEndOf="@+id/imageArtist"
-            app:layout_constraintTop_toTopOf="@id/imageArtist"
-            app:layout_constraintBottom_toBottomOf="@id/imageArtist"
+            app:layout_constraintStart_toEndOf="@+id/ivArtist"
+            app:layout_constraintTop_toTopOf="@id/ivArtist"
+            app:layout_constraintBottom_toBottomOf="@id/ivArtist"
             tools:text="Love of Lesbian hdhdhdhdhdhdhdhddhh" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -41,12 +43,12 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivShare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/margin_16dp"
+        android:layout_height="@dimen/margin_16dp"
         android:layout_marginEnd="@dimen/margin_16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/clArtist"
         app:layout_constraintBottom_toBottomOf="@+id/clArtist"
-        android:src="@drawable/ic_launcher_background"/>
+        android:src="@drawable/ic_menu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
