--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="margin_20dp">20dp</dimen>
     <dimen name="margin_60dp">60dp</dimen>
     <dimen name="margin_90dp">90dp</dimen>
+    <dimen name="margin_120dp">120dp</dimen>
 
 </resources>
